--- a/sections/Analysis_Systematics.tex
+++ b/sections/Analysis_Systematics.tex
@@ -1,4 +1,4 @@
-The differential cross-section measurements discussed in this thesis are affected by three sources of systematic uncertainties, experimental sources, theoretical sources, and intrinsic systematics related to the unfolding process. The statistical uncertainty of the measurements is dominant as data statistics limit the cross-section measurements. This section discusses the source of theoretical, experimental, and unfolding uncertainties and the propagation of statistical and systematic uncertainties to the final unfolded cross-section measurements. 
+The differential cross-section measurements discussed in this thesis are affected by three sources of systematic uncertainties: experimental sources, theoretical sources, and intrinsic systematics related to the unfolding process. The statistical uncertainty of the measurements is dominant as data statistics limit the cross-section measurements. This section discusses the source of theoretical, experimental, and unfolding uncertainties and the propagation of statistical and systematic uncertainties to the final unfolded cross-section measurements. 
 
 \subsection{Theoretical Uncertainties}
 \label{subsec:TheoryUnc}
@@ -6,9 +6,9 @@ The differential cross-section measurements discussed in this thesis are affecte
 The following sources of theoretical uncertainties are considered in the measurement.
 
 \begin{itemize}
-\item{\textbf{Uncertainties on QCD Scale:} As discussed in Section \ref{sec:Pheno}, the theoretical predictions of cross-sections depend on the factorization scale ($\mu_{F}$) and renormalization scale ($\mu_{R}$) \cite{QCDScaleAndPDFUnc}. To account for this dependence, a QCD scale uncertainty is evaluated by scaling $\mu_{F}$ and $\mu_{R}$ independently using on-the-fly variations provided by the MC generators. The variations constitute of six-point variations of $\mu_{F}$ and $\mu_{R}$ from $-50\%$ to $+100\%$ around their nominal values of 1, such that \{$\mu_R = 0.5, \mu_F = 0.5$\}, \{$\mu_R = 0.5, \mu_F = 1.0$\}, \{$\mu_R = 1.0, \mu_F = 0.5$\}, \{$\mu_R = 1.0, \mu_F = 2.0$\}, \{$\mu_R = 2.0, \mu_F = 1.0$\}, and \{$\mu_R = 2.0, \mu_F = 2.0$\}. The final uncertainty is evaluated as the absolute envelope of the six variations. The QCD scale uncertainties are evaluated individually for $qqZZ$, $ggZZ$, and $EWK~ qqZZjj$ samples.
+\item{\textbf{Uncertainties on QCD Scale}\\ As discussed in Section \ref{sec:Pheno}, the theoretical predictions of cross-sections depend on the factorization scale ($\mu_{F}$) and renormalization scale ($\mu_{R}$) \cite{QCDScaleAndPDFUnc}. To account for this dependence, a QCD scale uncertainty is evaluated by scaling $\mu_{F}$ and $\mu_{R}$ independently using on-the-fly variations provided by the MC generators. The variations constitute of six-point variations of $\mu_{F}$ and $\mu_{R}$ from $-50\%$ to $+100\%$ around their nominal values of 1, such that \{$\mu_R = 0.5, \mu_F = 0.5$\}, \{$\mu_R = 0.5, \mu_F = 1.0$\}, \{$\mu_R = 1.0, \mu_F = 0.5$\}, \{$\mu_R = 1.0, \mu_F = 2.0$\}, \{$\mu_R = 2.0, \mu_F = 1.0$\}, and \{$\mu_R = 2.0, \mu_F = 2.0$\}. The final uncertainty is evaluated as the absolute envelope of the six variations. The QCD scale uncertainties are evaluated individually for $qqZZ$, $ggZZ$, and $EWK~ qqZZjj$ samples.
 }
-\item{\textbf{Uncertainties on PDF $\&$ $\alpha_{S}$:} The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} $\&$ CT14nnlo \cite{CT14nnlo} PDF sets, and variations of the strong coupling constant by $\pm0.001$ around the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations and the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
+\item{\textbf{Uncertainties on PDF and $\alpha_{S}$}\\ The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} and CT14nnlo \cite{CT14nnlo} PDF sets, and variations of the strong coupling constant by $\pm0.001$ around the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations and the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
 \begin{equation}
     \sigma_{PDF}^{NNPDF3.0NNLO} = \sqrt{ [ max (\sigma_{std.~dev.~int.}, |\sigma_{MMHT2014nnlo}| , |\sigma_{CT14nnlo}|~)]^2 + \sigma_{\alpha_S}^2 }.
 \end{equation}
@@ -18,11 +18,11 @@ The PDF uncertainty is evaluated individually for $qqZZ$, $ggZZ$, and \textsc{Ma
 The electroweak $EWK~qqZZjj$ samples generated by \textsc{POWHEG-V2} do not have on-the-fly variations to evaluate the PDF uncertainty. Therefore, PDF uncertainty from the \textsc{MadGraph5} sample is taken as the PDF uncertainty for \textsc{POWHEG-V2} $EWK~qqZZjj$ samples.
 }
 
-\item{\textbf{Uncertainties on $gg\rightarrow ZZ^{(\ast)}$ NLO Corrections:}
+\item{\textbf{Uncertainties on $gg\rightarrow ZZ^{(\ast)}$ NLO Corrections}\\
 The uncertainty is related to the NLO QCD k-factor applied to the $ggZZ$ sample \cite{ggZZNLOUnc}. The NLO QCD k-factors applied are evaluated differentially as a function of the $m_{4\ell}$. 
 }
 
-\item{\textbf{$t\bar{t}V$ $\&$ $VVV$ cross-sections:}
+\item{\textbf{$t\bar{t}V$ and $VVV$ cross-sections}\\
 The experimental uncertainties on recently published cross-section measurements of the $ttV$~\cite{ATLAS_ttV} and $WZZ$~\cite{ATLAS_VVV} processes by ATLAS are propagated for the analysis. On the entire $ttV$ process, a flat conservative variation of $15\%$ is applied, taken from the cross-section measurement of $ttZ$. Similarly, for $VVV$ conservative $10\%$ variation taken from the cross-section measurement of $WWZ$ is applied to the total $VVV$ samples.
 }
 
@@ -32,49 +32,49 @@ As shown above, the theoretical uncertainties are process specific and are evalu
 
 \subsection{Experimental Uncertainties}
 \label{subsec:ExpUnc}
-The experimental uncertainties arise from the measurement of the energy and momentum scales of the reconstructed objects and the uncertainties on object reconstruction, identification, and selection efficiencies. The following category summarizes the sources of experimental uncertainties,
+The experimental uncertainties arise from the measurement of the energy and momentum scales of the reconstructed objects and the uncertainties on object reconstruction, identification, and selection efficiencies. The following category summarizes the sources of experimental uncertainties.
 
-\textbf{Jet Related Uncertainties: }
+\textbf{Jet Related Uncertainties }\\
 The analysis requires two jets in the final state. Therefore, jet-related uncertainties resulting from jet reconstruction, calibration, and selection uncertainties are among the most significant sources of experimental systematic uncertainties. 
 
 \begin{itemize}
-    \item{\textbf{Jet Reconstruction Uncertainty:}
+    \item{\textbf{Jet Reconstruction Uncertainty}\\
     The jet-related uncertainties associated with reconstruction and different steps of calibration discussed in Section \ref{subsec:ParticleRecon_Jets} are provided by ATLAS-supported tool $\textit{JetUncertainties}\footnote{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/JetUncertainties}$. The tool provides several configurations for jet-related uncertainties adjusted to the various needs of several analyses. The measurement uses $\textit{GlobalReduction\_FullJER}$ configuration with a total of $36$ uncertainties, each with upward and downward components, corresponding to $36\times2$ variations, $20\times 2$ of which are related to JES, and $13\times2$ are related to JER. $6\times 2$ of the $36 \times 2$ variations are related to the $\eta$ inter-calibration procedure, $4\times 2$ to the pile-up energy subtraction step in jet calibration, and $8 \times 2$ to the in-situ calibration of jets. Additional $1\times 2$ variations arise separately each from the flavor composition, flavor response, a single particle response at high $p_{T}$, and possible punch-through\footnote{particles' probabilities of passing through the calorimeters} effects.
     }
-    \item{\textbf{JVT $\&$ fJVT Uncertainties:} Additional sets of jet uncertainties ($1\times 2$) arising each from the efficiencies of jet vertex selections, JVT, and fJVT cut requirements are also considered in the analysis. }
+    \item{\textbf{JVT and fJVT Uncertainties}\\ Additional sets of jet uncertainties ($1\times 2$) arising each from the efficiencies of jet vertex selections, JVT, and fJVT cut requirements are also considered in the analysis. }
 \end{itemize}
 
 An envelope of the up and down variation for each of the $13$ JER uncertainties are added in quadrature to get the total effect of JER systematics. The variations related to the JES and jet calibration are single-sided, and an average in modulus is taken as the uncertainty for each of these sources. The total uncertainty from jets is the sum quadrature of uncertainty from total JER and all other sources. 
 
-\textbf{Lepton Related Uncertainties: } The following categories define the lepton-related uncertainties in the analysis
+\textbf{Lepton Related Uncertainties}\\ The following categories define the lepton-related uncertainties in the analysis
 \begin{itemize}
-    \item{\textbf{Electron Efficiencies:}
+    \item{\textbf{Electron Efficiencies}\\
     The electron efficiency uncertainty consists of uncertainties on the trigger, identification, reconstruction,
 and isolation efficiencies of electrons. These uncertainties are provided by an ATLAS-supported
 tool $\textit{ElectronEffciencyCorrection} \footnote{https://gitlab.cern.ch/atlas/athena/-/tree/21.2/PhysicsAnalysis/ElectronPhotonID/ElectronEfficiencyCorrection} $. There are a total of $61$ nuisance parameters related to electron efficiencies, each with upward and downward components corresponding to $61\times2$ variations. $34\times2$ out of $61$ is related to uncertainties in identification efficiency, $25\times2$ related to the reconstruction efficiencies, and a single nuisance parameter ($1\times2$) each from the isolation efficiency and trigger efficiency scale factors.    
     }
-    \item{\textbf{Muon Efficiencies:} Similar to the electrons, muon efficiency uncertainty consists of variations on the trigger, identification, reconstruction, and isolation efficiencies of muons, which are provided by another ATLAS-supported tool $\textit{MuonEfficiencyCorrections} \footnote{21https://gitlab.cern.ch/atlas/athena/-/tree/21.2/PhysicsAnalysis/MuonID/MuonIDAnalysis/MuonEfficiencyCorrections} $. In total, there are $10\times2$ nuisance parameters, sets of two ($2\times2$) variations corresponding to trigger efficiency scale factors, sets of four ($4\times2$) related to the identification and reconstructed efficiency, two sets of two ($2\times 2$) each corresponding to the isolation efficiency and track-to-vertex association efficiency. 
+    \item{\textbf{Muon Efficiencies}\\ Similar to the electrons, muon efficiency uncertainty consists of variations on the trigger, identification, reconstruction, and isolation efficiencies of muons, which are provided by another ATLAS-supported tool $\textit{MuonEfficiencyCorrections} \footnote{21https://gitlab.cern.ch/atlas/athena/-/tree/21.2/PhysicsAnalysis/MuonID/MuonIDAnalysis/MuonEfficiencyCorrections} $. In total, there are $10\times2$ nuisance parameters, sets of two ($2\times2$) variations corresponding to trigger efficiency scale factors, sets of four ($4\times2$) related to the identification and reconstructed efficiency, two sets of two ($2\times 2$) each corresponding to the isolation efficiency and track-to-vertex association efficiency. 
     }
-    \item{\textbf{Electron Scale $\&$ Resolution:} The electron scale and resolution uncertainty is accounted for by two sets of nuisance parameters corresponding to $2\times2$ variations. 
+    \item{\textbf{Electron Scale and Resolution}\\ The electron scale and resolution uncertainty is accounted for by two sets of nuisance parameters corresponding to $2\times2$ variations. 
 
     }
-    \item{\textbf{Muon Scale $\&$ Resolution:} For muons resolution and scale uncertainties, there are $5$ sets of nuisance parameters, $2\times2$ corresponding to the muon momentum resolution as measured separately by the inner detector and the muon spectrometer. One set of nuisance parameters ($1\times 2$) corresponds to the uncertainties on the muon momentum scale, and two sets of $2\times 2$ are associated with the uncertainties in measurement of muon sagitta due to the ID alignment.}
+    \item{\textbf{Muon Scale and Resolution}\\ For muons resolution and scale uncertainties, there are $5$ sets of nuisance parameters, $2\times2$ corresponding to the muon momentum resolution as measured separately by the inner detector and the muon spectrometer. One set of nuisance parameters ($1\times 2$) corresponds to the uncertainties on the muon momentum scale, and two sets of $2\times 2$ are associated with the uncertainties in measurement of muon sagitta due to the ID alignment.}
 \end{itemize}
 
-\textbf{Other Experimental Uncertainties: }
+\textbf{Other Experimental Uncertainties }\\
 \begin{itemize}
-    \item{\textbf{Pile-up Reweighting:} As discussed in Section \ref{subsec:EventWt}, the MC predictions are reweighted to match the pile-up profile of data. A single $1\times2$ nuisance parameter accounts for upward and downward variations in the factors used for pile-up reweighting. }
-    \item{\textbf{Luminosity:} As discussed in Section \ref{subsec:Dataset}, the uncertainty in the collected integrated luminosity of $139 fb^{-1}$ is $\pm1.7\%$, which is applied as a flat variation to both particle and detector-level yields. } 
+    \item{\textbf{Pile-up Reweighting}\\ As discussed in Section \ref{subsec:EventWt}, the MC predictions are reweighted to match the pile-up profile of data. A single $1\times2$ nuisance parameter accounts for upward and downward variations in the factors used for pile-up reweighting. }
+    \item{\textbf{Luminosity}\\ As discussed in Section \ref{subsec:Dataset}, the uncertainty in the collected integrated luminosity of $139 fb^{-1}$ is $\pm1.7\%$, which is applied as a flat variation to both particle and detector-level yields. } 
 \end{itemize}
 
-The experimental uncertainties affect all detector-level MC predictions and the estimate of the fake backgrounds. A total variation-applied detector-level prediction is constructed for each variation, including the contributions from signal physics processes ($qqZZ+ggZZ+EWK~qqZZjj$), MC predicted background physics processes ($ttV+VVV$) and variation-applied fake background estimate. The variation-applied background (MC + fakes) is first subtracted from the variation-applied total MC prediction and then unfolded using the unfolding inputs from the nominal SM prediction. The individual systematic uncertainty corresponds to the difference between the variation-applied and nominal unfolded distributions for each variation.  
+The experimental uncertainties affect all detector-level MC predictions and the estimate of the non-prompt backgrounds. A total variation-applied detector-level prediction is constructed for each variation, including the contributions from signal physics processes ($qqZZ+ggZZ+EWK~qqZZjj$), MC predicted background physics processes ($ttV+VVV$) and variation-applied non-prompt background estimate. The variation-applied background (MC + fakes) is first subtracted from the variation-applied total MC prediction and then unfolded using the unfolding inputs from the nominal SM prediction. The individual systematic uncertainty corresponds to the difference between the variation-applied and nominal unfolded distributions for each variation.  
 
 \subsection{Unfolding Uncertainties}
 \label{subsec:UnfoldingUnc}
 The following two uncertainties are intrinsic to the unfolding process itself and are included in the uncertainties for the unfolded differential cross-sections.
 
 \begin{itemize}
-    \item{\textbf{Unfolding Bias:} The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias} or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen as the systematic uncertainty on the intrinsic unfolding bias. 
+    \item{\textbf{Unfolding Bias}\\ The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias} or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen as the systematic uncertainty on the intrinsic unfolding bias. 
 
     First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo-detector-level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector-level distribution from the MC by applying the detector's acceptance and efficiency corrections, adding detector resolution-induced bin migration between the truth and detector-level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' actual value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS-Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins.
     \begin{figure}[!htb]
@@ -109,7 +109,7 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 
     }
 
-    \item{\textbf{QCD $qqZZ$ Modeling Uncertainty:} There are known differences in predictions from different generators caused by differences in parton shower and hadronization modeling. Therefore, the second source of unfolding systematics is required to account for the differences in the unfolding input modeling, which is estimated by varying the prediction of the dominant QCD $qqZZ$ process. To avoid double-counting of the unfolding method covered by the unfolding bias, an alternative $qqZZ$ sample predicted by \textsc{MadGraph5} is first reweighted to match the nominal-\textsc{Sherpa} lineshape. The reweighted detector-level distribution is unfolded using the inputs from nominal-\textsc{Sherpa} and compared with the reweighted-\textsc{MadGraph5} particle-level distribution. The relative difference between these two distributions is taken as modeling systematic uncertainty. Figure \ref{fig:QCDModelUnc} shows the estimation of the modeling uncertainty for $m_{jj}$ in the VBS-Enhanced region. The ratio panel of the right plot shows the QCD modeling uncertainties, which range from $2-4\%$ varying in different bins.
+    \item{\textbf{QCD $qqZZ$ Modeling Uncertainty}\\ There are known differences in predictions from different generators caused by differences in parton shower and hadronization modeling. Therefore, the second source of unfolding systematics is required to account for the differences in the unfolding input modeling, which is estimated by varying the prediction of the dominant QCD $qqZZ$ process. To avoid double-counting of the unfolding method covered by the unfolding bias, an alternative $qqZZ$ sample predicted by \textsc{MadGraph5} is first reweighted to match the nominal-\textsc{Sherpa} lineshape. The reweighted detector-level distribution is unfolded using the inputs from nominal-\textsc{Sherpa} and compared with the reweighted-\textsc{MadGraph5} particle-level distribution. The relative difference between these two distributions is taken as modeling systematic uncertainty. Figure \ref{fig:QCDModelUnc} shows the estimation of the modeling uncertainty for $m_{jj}$ in the VBS-Enhanced region. The ratio panel of the right plot shows the QCD modeling uncertainties, which range from $2-4\%$ varying in different bins.
     
     \begin{figure}[!htb]
         \centering
@@ -123,7 +123,7 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 
 \subsection{Background Uncertainties}
 \label{subsec:BkgUnc}
-There are additional sources of uncertainties from the data-driven estimate of the fake background. The statistical and systematic uncertainties on the fake efficiency discussed in Section \ref{subsubsec:FakeEff}, estimated in the combined control region, are propagated to the final unfolded cross-section yield. First, the variation-applied fake background is calculated and subtracted from the nominal detector-level prediction for each variation. The subtracted altered distribution is then unfolded with nominal unfolding inputs. The difference between the altered-unfolded distribution and the nominal-unfolded distribution gives the impact of the background uncertainties on the unfolded cross-section measurements.
+There are additional sources of uncertainties from the data-driven estimate of the non-prompt background. The statistical and systematic uncertainties on the fake efficiency discussed in Section \ref{subsubsec:FakeEff}, estimated in the combined control region, are propagated to the final unfolded cross-section yield. First, the variation-applied non-prompt background is calculated and subtracted from the nominal detector-level prediction for each variation. The subtracted altered distribution is then unfolded with nominal unfolding inputs. The difference between the altered-unfolded distribution and the nominal-unfolded distribution gives the impact of the background uncertainties on the unfolded cross-section measurements.
 
 \subsection{Statistical Uncertainties}
 \label{subsubsec:StatUnc}
