--- a/sections/Analysis_Unfolding.tex
+++ b/sections/Analysis_Unfolding.tex
@@ -1,36 +1,36 @@
-The main results of the thesis are differential cross-section measurements at the particle level. The inclusive detector-level cross-section for a given physics process $p_{1}p_{2}\rightarrow X$ is, 
+The main results of this thesis are differential cross-section measurements at the particle level. The inclusive detector-level cross-section for a given physics process $p_{1}p_{2}\rightarrow X$ is
 \begin{equation}
     \sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X} = A \times \epsilon \times \sigma ^{particle-level}_{p_{1}p_{2}\rightarrow X},
     \label{eqn:InclusiveXS}
 \end{equation}
-where $\sigma ^{particle-level}_{p_{1}p_{2}\rightarrow X}$ is the \textit{true cross-section} of the physics process predicted by the theory, $A$ is the \textit{detector acceptance} and $\epsilon$ is the \textit{reconstruction efficiency}. The physical layout of the ATLAS detector does not cover all areas of the phase space. $A$ accounts for the limited acceptance of the ATLAS detector. Several parts of the detector have several reconstruction efficiencies, which are accounted for by the factor $\epsilon$. The detector-level cross-section is measured experimentally in terms of the number of particles in a given final state (N) and integrated Luminosity $L$ as $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X} = \frac{N}{L}$. The \textit{true} particle-level inclusive cross-section can be estimated by correcting for detector acceptance and detector efficiency on the measured cross-section $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X}$. Additionally, for differential cross-sections, where the cross-section is measured in different bins of the kinematic observables, further correction is needed to correct the resolution-induced migration between nearby bins. 
+where $\sigma ^{particle-level}_{p_{1}p_{2}\rightarrow X}$ is the \textit{true cross-section} of the physics process predicted by the theory, $A$ is the \textit{detector acceptance} and $\epsilon$ is the \textit{reconstruction efficiency}. The physical layout of the ATLAS detector does not cover all areas of the phase space, and the term $A$ accounts for the limited acceptance of the ATLAS detector. Several parts of the detector have several reconstruction efficiencies, which are accounted for by the factor $\epsilon$. The detector-level cross-section is measured experimentally in terms of the number of particles in a given final state (N) and integrated Luminosity $L$ as $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X} = \frac{N}{L}$. The \textit{true} particle-level inclusive cross-section can be estimated by correcting for detector acceptance and detector efficiency on the measured cross-section $\sigma ^{detector~level}_{p_{1}p_{2}\rightarrow X}$. Additionally, for differential cross-sections, where the cross-section is measured in different bins of the kinematic observables, further correction is needed to correct the resolution-induced migration between nearby bins. 
 
 This Chapter discusses the unfolding technique in detail. Section \ref{subsec:UnfoldingOverview} gives an overview of the unfolding algorithm, and Section \ref{subsec:Binning} discusses the optimal binning for unfolding. Section \ref{subsec:UnfoldingValidation} validates the unfolding method, and Section \ref{subsec:Bias} discusses the bias from unfolding and the attempts to optimize the bias. 
 
 \subsection{Method Overview}
 \label{subsec:UnfoldingOverview}
-The analysis uses an \textit{iterative Bayesian unfolding} algorithm based on Baye's theorem \cite{BayesianUnfolding} \cite{Improved_BayesianUnfolding} using the ATLAS-supported \textit{RooUnfold} package \cite{RooUnfold}. Bayes' theorem formulates a mathematical relation to obtain a probability of an effect $E$ caused by several independent causes $C_{i}$, given the initial probability of the causes $P(C_{i})$ and the conditional probability of the $i-th$ cause to produce the effect $P(E|C_{i})$ as, 
+The analysis uses an \textit{iterative Bayesian unfolding} algorithm based on Baye's theorem \cite{BayesianUnfolding} \cite{Improved_BayesianUnfolding} using the ATLAS-supported \textit{RooUnfold} package \cite{RooUnfold}. Bayes' theorem formulates a mathematical relation to obtain a probability of an effect $E$ caused by several independent causes $C_{i}$, given the initial probability of the causes $P(C_{i})$ and the conditional probability of the $i-th$ cause to produce the effect $P(E|C_{i})$ as 
 \begin{equation}
 P(C_{i}|E) = \frac{ P(E|C_{i}) . P(C_{i}) } { \sum_{j}{ P(E|C_{j}).P(C_{j}) } }.
 \label{eqn:BayesTheorem}
 \end{equation}
 The obtained probability depends on the prior probability of the cause and the conditional probability of cause and effect, where, in experimental particle physics, the cause is the actual particle-level value, and the effect is the measured one. The prior dependency is reduced by using an iterative technique, where the outcome of the previous iteration is used as a prior for the subsequent iteration.
 
-For a single iteration, the algorithm can be summarized as, 
+For a single iteration, the algorithm can be summarized as 
 \begin{equation}
     U_{i} = \frac{1}{ \epsilon_{i} } \times \sum^{reco~bins}_{j}{ (R_j -F_j ) . f_{i} . \frac{M_{ji} T_{i}}{ \sum_{k}^{truth~bins}{M_{jk} T_{k}}} },
     \label{eqn:BayesianUnfolding}
 \end{equation}
 where $U_{i}$ is the unfolded yield in the target bin $i$, $T_{i}$ is the predicted truth level yield in particle bin $i$, $R_{j}$ is the observed detector-level yield in reco bin $j$ and $F_{j}$ is the subtracted detector-level reducible background yield. $M_{ij}$ is the migration matrix element from particle-level bin $j$ to detector-level bin $i$. 
 
-Based on the discussion, conceptually, three corrections from the SM MC prediction need to be applied to estimate the unfolded yield. The three unfolding inputs are 
+Based on the discussion above, conceptually, three corrections from the SM MC prediction need to be applied to estimate the unfolded yield. The three unfolding inputs are 
 
 \begin{itemize}
-    \item{\textit{\textbf{Reconstruction efficiency ($\epsilon$):}} The reconstruction efficiency accounts for the limited efficiency of the detector. Technically, it is defined as a fraction of events that pass both detector and fiducial level selection to the events passing only the fiducial level selection. }
+    \item{\textit{\textbf{Reconstruction efficiency ($\epsilon$),}} which accounts for the limited efficiency of the detector. It is defined as the ratio between the number of events that pass both detector- and fiducial-level selections and the number of events that pass only the fiducial-level selection. }
     
-    \item{\textit{\textbf{Fiducial fraction ($f$):}} The fiducial fraction partially accounts for events that are outside the fiducial region which are selected as part of the detector-level events due to limited detector resolution. An example of such an event would be a signal $ZZ^*(\rightarrow 4\ell) jj$ event where one of the jets originates from pile-up instead of hard-scatter. Technically, it is defined as a fraction of events that pass both detector and fiducial level selection to the events passing only the detector-level selection. }
+    \item{\textit{\textbf{Fiducial fraction ($f$),}} which corrects for events that are outside the fiducial region which are selected as part of the detector-level events due to limited detector resolution. An example of such an event would be a signal $ZZ^*(\rightarrow 4\ell) jj$ event where one of the jets originates from pile-up instead of hard-scatter. It is defined as the ratio between the number of events that pass both detector- and fiducial-level selections to the number of events passing only the detector-level selection. }
     
-    \item{\textit{\textbf{Migration matrix ($M_{ij}$):}} The migration matrix is a two-dimensional matrix that accounts for events migrated from particle-level bin $j$ to detector-level bin $i$. The migration matrix corrects the probability of bin migration. It is measured in MC by comparing particle- and detector-level distributions for events that pass both fiducial- and detector-level selections. Bin migrations result from resolution effects and smearing of the reconstructed distributions. The diagonal component of the migration matrix is related to the \textit{fiducial purity}, which corresponds to the fraction of detector-level events that originate from the same bin at the particle level. A similar distribution \textit{stability} defined as the fraction of particle-level events reconstructed in the same detector-level bin is also closely related to the diagonal component of the migration matrix. }
+    \item{\textit{\textbf{Migration matrix ($M_{ij}$),}} is a two-dimensional matrix that accounts for events migrated from particle-level bin $j$ to detector-level bin $i$. The migration matrix corrects the probability of bin migration. It is measured in MC by comparing particle- and detector-level distributions for events that pass both fiducial- and detector-level selections. Bin migrations result from resolution effects and smearing of the reconstructed distributions. The diagonal component of the migration matrix is related to the \textit{fiducial purity}, which corresponds to the fraction of detector-level events that originate from the same bin at the particle level. A similar distribution \textit{stability} defined as the fraction of particle-level events reconstructed in the same detector-level bin is also closely related to the diagonal component of the migration matrix. }
 \end{itemize}
 
 Figures \ref{fig:UI_mjj} and \ref{fig:MigMatrix} show the first two unfolding inputs along with purity and stability, and the migration matrix for $m_{jj}$, respectively, in the VBS-Enhanced region. The reconstruction efficiency is less than $50\%$ resulting from the poor efficiency of jet reconstruction. The fiducial fraction and purity are smaller in lower bins of $m_{jj}$, which mainly corresponds to the contribution from pile-up jets faking the event selection. The normalized migration matrix shown in the second plot with the particle-level prediction in $y-axis$ and the detector-level prediction in $x-axis$ is diagonal.
@@ -50,11 +50,11 @@ Figures \ref{fig:UI_mjj} and \ref{fig:MigMatrix} show the first two unfolding in
     \caption{ Unfolding inputs from SM MC as a function of $m_{jj}$ in the VBS-Enhanced region. \label{fig:UnfoldingInputs}}
 \end{figure}
 
-\subsection{Binning for Unfolding}
+\subsection{Binning Optimization}
 \label{subsec:Binning}
-Optimal binning is required to effectively perform the unfolding procedure for all kinematic observables. Two factors drive the choice of binning; first, the necessity to have large enough bin statistics to maintain the Gaussian approximation in statistical uncertainty propagation while preserving the shape of the differential distributions, and second, the necessity to minimize large bin migrations and statistical uncertainties from unfolding. Therefore, each bin must have at least $15$ events in the VBS-Suppressed region and at least $20$ events in the VBS-Enhanced signal region. 
+Optimal binning is required to perform the unfolding procedure effectively for all kinematic observables. Two factors drive the choice of binning: the necessity to have large enough bin statistics to maintain the Gaussian approximation in statistical uncertainty propagation while preserving the shape of the differential distributions and the necessity to minimize large bin migrations and statistical uncertainties from unfolding. Therefore, each bin must have at least $15$ events in the VBS-Suppressed region and at least $20$ events in the VBS-Enhanced signal region. 
 
-To maintain a good performance of the unfolding, each bin for the kinematic observable has at least $70\%$ purity except for $p_{T,4\ell jj}$ where at least $50\%$ purity is required. Moreover, for each observable, every bin width must be equal to or greater than the resolution of the observable in the same bin. The resolution in each particle-level bin is evaluated from MC by comparing the difference of particle and detector-level yield for events that pass both fiducial- and detector-level event selection. The difference is fitted using Gaussian approximation, and twice the resulting standard deviation is taken as the resolution. Table \ref{tab:binning} shows the final bin choices for all kinematic observables used in differential cross-section measurement.
+To maintain a good performance of the unfolding, each bin for the kinematic observable has at least $70\%$ purity except for $p_{T,4\ell jj}$ where at least $50\%$ purity is required. Moreover, every bin width must be equal to or greater than the observable resolution in the same bin for each observable. The resolution in each particle-level bin is evaluated from MC by comparing the difference of particle and detector-level yield for events that pass both fiducial- and detector-level event selection. The difference is fitted using Gaussian approximation, and twice the resulting standard deviation is taken as the resolution. Table \ref{tab:binning} shows the final bin choices for all kinematic observables used in differential cross-section measurement.
 
 \begin{table}[!htbp]
     \caption{Binning for all unfolded observables in VBS-Enhanced and VBS-Suppressed regions. \label{tab:binning}}
@@ -119,12 +119,12 @@ To maintain a good performance of the unfolding, each bin for the kinematic obse
 
 \subsection{Method Validation}
 \label{subsec:UnfoldingValidation}
-The unfolding method is validated using three different tests.
+The unfolding method is validated using three tests: MC-based closure test, injection test, and test with physics variations.  
 
 \subsubsection{MC Validation Test}
 \label{subsubsec:MCClosure}
 
-The first validation of the unfolding technique is with the SM MC. An SM-predicted detector-level distribution for a kinematic observable is unfolded using the unfolding inputs from the same MC. Figure \ref{fig:unfolding_technical_closure} shows an example of the MC-based closure test for $m_{jj}$ in the VBS-Enhanced region. The detector-level MC prediction is unfolded using the inputs from the same MC, and the resulting unfolded distribution is compared with the particle-level prediction. Since both detector-level prediction and unfolding inputs are from the same MC, a perfect closure is observed when comparing the unfolded- and particle-level predictions.
+The first validation of the unfolding technique is with the SM MC. A detector-level distribution for a kinematic observable is predicted from SM and unfolded using the unfolding inputs from the same MC. Figure \ref{fig:unfolding_technical_closure} shows an example of the MC-based closure test for $m_{jj}$ in the VBS-Enhanced region. The detector-level MC prediction is unfolded using the inputs from the same MC, and the resulting unfolded distribution is compared with the particle-level prediction. Since both detector-level prediction and unfolding inputs are from the same MC, a perfect closure is observed when comparing the unfolded- and particle-level predictions.
 
 \begin{figure}[!htb]
 \centering
