--- a/sections/Appendix.tex
+++ b/sections/Appendix.tex
@@ -3,7 +3,7 @@
 \subsection{Contribution to $ZZ^*(\rightarrow 4\ell)jj$ Measurement} 
 \label{subsec:ZZjjContr}
 
-The measurements presented in this thesis are the result of the effort of the ATLAS "Differential VBS $ZZ^*jj$" analysis team. As one of the two primary analyzers in this team, I have contributed to several aspects of this measurement, from the initial formation to the current stage of finalization and publication. I contributed significantly to defining the analysis phase space discussed in Chapter $IV$. The phase space defined in the preceding ATLAS analysis \cite{ATLASZZjj}, which observed the electroweak $ZZjj$ process was not optimal for differential measurements. Therefore, I led the studies performed to modify the kinematic selections to increase the acceptance, defined the isolation working point to maintain optimal signal-selection and background-rejection probabilities, and established novel pair sorting strategy to reduce the bin migration in unfolding. Moreover, I developed and maintained the main analysis framework, which implements the latest recommendations from combined performance groups for physics object reconstruction discussed in Chapter $III$, and performs the kinematic selections discussed in Chapter $IV$. This framework applies all the scale factors and event weights in MC events and the final events used in the measurement. Additionally, I estimated the fake backgrounds of the analysis using the background estimation technique discussed in Section \ref{sec:Bkg} and contributed to the selection of the relevant systematics discussed in Section \ref{sec:Uncertainties} of Chapter $V$. Finally, I validated the novel next-to-leading-order \textsc{Powheg} $qqZZjj$ MC sample used as the primary sample for the electroweak production of $ZZ^*(\rightarrow 4\ell)jj$. I checked the compatibility between the measured data and SM prediction. 
+The measurements presented in this thesis are the result of the effort of the ATLAS "Differential VBS $ZZ^*jj$" analysis team. As one of the two primary analyzers in this team, I have contributed to several aspects of this measurement, from the initial formation to the current stage of finalization and publication. I contributed significantly to defining the analysis phase space discussed in Chapter $IV$. The phase space defined in the preceding ATLAS analysis \cite{ATLASZZjj}, which observed the electroweak $ZZjj$ process was not optimal for differential measurements. Therefore, I led the studies performed to modify the kinematic selections to increase the acceptance, defined the isolation working point to maintain optimal signal-selection and background-rejection probabilities, and established novel pair sorting strategy to reduce the bin migration in unfolding. Moreover, I developed and maintained the main analysis framework, which implements the latest recommendations from combined performance groups for physics object reconstruction discussed in Chapter $III$, and performs the kinematic selections discussed in Chapter $IV$. This framework applies all the scale factors and event weights in MC events and the final events used in the measurement. Additionally, I estimated the non-prompt backgrounds of the analysis using the background estimation technique discussed in Section \ref{sec:Bkg} and contributed to the selection of the relevant systematics discussed in Section \ref{sec:Uncertainties} of Chapter $V$. Finally, I validated the novel next-to-leading-order \textsc{Powheg} $qqZZjj$ MC sample used as the primary sample for the electroweak production of $ZZ^*(\rightarrow 4\ell)jj$. I checked the compatibility between the measured data and SM prediction. 
 
 \subsection{Contribution to the ATLAS Experiment}
 \label{subsec:ATLASContr}
@@ -104,7 +104,7 @@ The differential measurements of the $ZZ^*(\rightarrow 4\ell)jj$ process are sta
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/FakeFraction_eta_jets.pdf}
         \caption{$\eta$\label{fig:FidFakeseta}}
     \end{subfigure}
-    \caption{ Fraction of fake fiducial events as a function of $p_{T}\&~\eta$ of the leading (x-axis) and the sub-leading jets (y-axis) in the VBS-Enhanced region.\label{fig:fake_fraction_jets}}
+    \caption{ Fraction of fake fiducial events as a function of $p_{T}$ and $\eta$ of the leading (x-axis) and the sub-leading jets (y-axis) in the VBS-Enhanced region.\label{fig:fake_fraction_jets}}
 \end{figure}
 
 \section{VBS-Suppressed Region}
