--- a/sections/LHC_ObjectReconstruction.tex
+++ b/sections/LHC_ObjectReconstruction.tex
@@ -1,6 +1,6 @@
 \section{ Physics Object Reconstruction} 
 \label{sec:ParticleReconstruction}
-Different particles leave unique signatures in different sub-detectors of ATLAS. Figure \ref{fig:ATLASTransverse} shows a simplified representation of various particles passing through different sub-detectors and leaving various signatures. Physics object reconstruction is the process of interpreting these signals to extract meaningful information about each particle. This section discusses the detail of reconstruction relevant to the thesis. 
+Different particles leave unique signatures in different sub-detectors of ATLAS. Figure \ref{fig:ATLASTransverse} shows a simplified representation of various particles passing through different sub-detectors and leaving various signatures. Physics object reconstruction is the process of interpreting these signals to extract meaningful information about each particle. This section discusses the detail of reconstruction relevant to this thesis. 
 
 \begin{figure}[!htb]
     \centering
