--- a/sections/Results_ReInterpretation.tex
+++ b/sections/Results_ReInterpretation.tex
@@ -156,7 +156,7 @@ C^{syst.}_{ij} = \sum_{n}\delta_{n, i}\delta_{n, j}.
 The following particle-level uncertainties are considered as nuisance parameters in the profile likelihood fit,
 \begin{itemize}
     \item{\textbf{QCD Scale}: The same scale variations discussed in Section \ref{subsec:TheoryUnc} are considered for the parton-initiated QCD $qqZZ$, gluon-loop initiated QCD $ggZZ$ and EWK $qqZZjj$ samples.} 
-    \item{\textbf{QCD PDF $\& ~ \alpha_{S}$}: The same set of PDF and $\alpha_{S}$ at variations discussed in Section \ref{subsec:TheoryUnc} are considered at the particle-level for the parton-initiated QCD $qqZZ$, gluon-loop initiated QCD $ggZZ$ and EWK $qqZZjj$ samples. }
+    \item{\textbf{QCD PDF and $\alpha_{S}$}: The same set of PDF and $\alpha_{S}$ at variations discussed in Section \ref{subsec:TheoryUnc} are considered at the particle-level for the parton-initiated QCD $qqZZ$, gluon-loop initiated QCD $ggZZ$ and EWK $qqZZjj$ samples. }
     \item{\textbf{ggZZ NLO Reweighting}: Uncertainty on the k-factor for the $ggZZ$ sample is also taken into account. }
     \item{\textbf{QCD Modeling Uncertainties}: This uncertainty accounts for the modeling differences in the QCD $qqZZ$ samples and is estimated by taking the difference between \textsc{Sherpa} and \textsc{MadGraph} predictions.} 
 \end{itemize}
