--- a/thesis.tex
+++ b/thesis.tex
@@ -82,9 +82,37 @@ Dr. Alessandro Tricoli, Brookhaven National Laboratory
 \begin{center}
 \textbf{\large{Acknowledgements}}
 \end{center}
-I am sincerely grateful to many people who have had a signifcant impact on my  journey. 
-\clearpage
+I would not be able to get to this point without the people who supported me professionally and personally during my Ph.D. I am sincerely grateful for all the positive impacts that you have had on my career and life.
 
+First, I must thank my doctoral advisor \textbf{Gabriella Sciolla}. Thank you for making me a part of your research group and providing me with several opportunities to grow professionally as a researcher. Reaching this milestone would not be possible without your continuous support and mentorship throughout the past $5.5$ years. I have learned much from you, from physics to teaching, research proposal writing, and job applications. 
+
+Second, I want to thank my other two members of the committee, \textbf{Aram Apyan} and 
+\textbf{Alessandro Tricoli}. I am honored to have you on my committee. Thank you for reviewing my dissertation and giving me insightful feedback. In addition to the review, I must thank Aram for the discussions in the past year about vector boson scattering. I have learned a lot from you on this topic. I must also thank Alessandro for his guidance on this dissertation and the measurement presented here. Your comments have constantly challenged me to think about physics more insightfully. You have helped me realize some gaps in my knowledge and inspired me to be a better physicist.
+
+Next, I would like to thank my supervising post-doctoral researcher \textbf{Max Goblirsch}. You have taught me so much, from the fundamentals to the technical and statistical aspects of experimental research in Particle Physics. I succeeded as a student with your kind, patient, and diligent mentorship. Thank you for mentoring me in the past five years, involving me in exciting projects in several areas of ATLAS, and always making time to help, even with a full schedule. 
+
+Thank you to \textbf{Professor Craig Blocker} for temporarily coming out of retirement to help me review the Theory chapter of this thesis. Thank you as well to \textbf{Guglielmo Frattari} and \textbf{Jiayi Chen} for helping me review different parts of this thesis. 
+
+Next, I would like to thank all members of the \textbf{VBS ZZjj Differential} analysis team for their essential contribution to different aspects of this measurement and for being patient, as I made many mistakes along the way. Special thanks to \textbf{Matteo D'Uffizi} for working side by side on this measurement from its initial conception to the finalization.
+
+Thanks to the ITk mentors I had during my year at Brookhaven National Lab. First, I express my sincere gratitude to \textbf{David Lynn} for supervising my work on ITk, including the ATLAS qualification task. Thanks also to \textbf{Stefania Stucci}, \textbf{Phil Kuczewski}, and \textbf{Laura Bergsten} for all the guidance during this period. 
+
+Next, I would like to thank some additional ATLAS mentors who significantly impacted my career. Thanks to \textbf{Peter Jenni} for your optimism in my abilities and for helping me figure out the next steps of my career as a researcher. Thanks to \textbf{Valentina Cairo} for guiding my work and involvement in Tracking CP. 
+
+I want to thank some additional mentors within the Sciolla group. First, thank you \textbf{Hannah Herde} for your continuous mentorship in different aspects of my career, from ITk to preparing talks and networking. I am most grateful for your help in facing one of my biggest fear, public speaking. Thank you \textbf{Zach Schillaci} for all your technical support from git to Athena. I have learned so much about programming from you. 
+
+To my two undergraduate mentors, \textbf{David Probst} and \textbf{Jonathan Kessler}, thank you for believing in my abilities and setting me on this path of graduate school. 
+
+I am grateful to be a part of the research group where I have met many of my close friends. Each of you has been an integral part of my support system in graduate school. Thank you to \textbf{Laura Bergsten} for being my only friend for a year while living in Long Island, always taking me on adventures and introducing me to many new things. Thank you \textbf{Jiayi Chen} for sharing the experience of graduate school and Zumba sessions and always believing in me. Thank you \textbf{Zach Schillaci} for your joyful friendship and time with \textbf{Pinot} and for introducing me to the stock market. Thank you \textbf{Francesca Capocasa} for all the good times, food and celebrations. Thank you to \textbf{Sagar Addepalli} for being the best flatmate in the past year, feeding me so much delicious food, and listening to my countless complaints and Taylor Swift playlist. 
+
+I also want to thank a few other friends from Brandeis, \textbf{Aldric Rosario}, \textbf{Salman Alam}, \textbf{Sarvesh Uplap}, \textbf{Guangfeng Yu} and \textbf{Francis Rivera} for going through the first year experience of countless hours spent solving problem sets and preparing for qualification exams together. Thanks to Aldric and Salman for always saying "yes" to an adventure and good food. Thanks to \textbf{Gess Kelly} for her friendship and optimism in me. 
+
+To my family, \textbf{Mom}, \textbf{Dad}, \textbf{Aagaman}, and \textbf{Aashma}, thank you for all your love and support. 
+
+To my three special friends, whom I consider my US family, \textbf{Anu}, \textbf{Gargi}, and \textbf{Sapana}, thank you for your friendship and support. 
+
+Finally, to \textbf{Dinesh}, thank you for all your unconditional support and for taking care of me while I wrote this thesis.
+\clearpage
 
 %Abstract
 \phantomsection
