--- a/biblio.bib
+++ b/biblio.bib
@@ -149,6 +149,20 @@ author = {Alex Keshavarzi et al.}
 	journal = {Phys. Rev. Letters}
 }
 
+@article{VBSDiagrams,
+	doi = {10.1088/1126-6708/2008/11/010},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2008%2F11%2F010},
+	year = 2008,
+	month = {Nov},
+	publisher = {Springer Science and Business Media {LLC}}, 
+	volume = {2008},
+	number = {11},
+	pages = {010--010},
+	author = {{Ana Alboteanu, Wolfgang Kilian and Jürgen Reuter}},
+	title = {{Resonances and unitarity in weak boson scattering at the LHC}},
+	journal = {J. High Energ. Phys.}
+}
+
 @misc{StandardModel,
 	author = {{G. Buchalla}},
 	title = {{Introduction to The Standard Model, Lecture Notes in Theoretical Physics 6}},
@@ -162,6 +176,31 @@ author = {Alex Keshavarzi et al.}
 	address = {Colorado, USA},
 	publisher= {Westview PRESS},
 	year = {1995}
+}
+
+@article{SoftCollinear,
+    author = {{Ikuo Ito}},
+    title = "{IR Divergences in QCD and Kinoshita-Lee-Nauenberg Theorem}",
+    journal = {Progress of Theoretical Physics},
+    volume = {67},
+    number = {4},
+    pages = {1216-1231},
+    year = {1982},
+    month = {Apr},
+    issn = {0033-068X},
+    doi = {10.1143/PTP.67.1216},
+    url = {https://doi.org/10.1143/PTP.67.1216},
+    eprint = {https://academic.oup.com/ptp/article-pdf/67/4/1216/5215652/67-4-1216.pdf},
+}
+@article{PDFFigure,
+author = {{Luigi Del Debbio}},
+year = {2018},
+month = {Jan},
+pages = {01006},
+title = {{Parton distributions in the LHC era}},
+volume = {175},
+journal = {EPJ Web of Conferences},
+doi = {10.1051/epjconf/201817501006}
 }
 
 @misc{QCDForCollider,
