--- a/sections/Results_DetectorLevelMeasurements.tex
+++ b/sections/Results_DetectorLevelMeasurements.tex
@@ -17,7 +17,7 @@ Similarly, Figure \ref{fig:reco_VBS_Enhanced_b} shows the detector-level data an
 \item{ rapidity difference between two jets $[\Delta y_{jj}]$}, and 
 \item{ centrality of the system $[\zeta]$}.
 \end{itemize}
-For each of these distributions, the measured data (black dot) is compared with the state-of-the-art SM predictions, where the two QCD signal $qqZZjj$ (red) and $ggZZjj$ (blue), and the two MC predicted background, $VVV$ (yellow) and $ttV$ (purple) are \textsc{Sherpa} predictions. The contribution from fake backgrounds (light pink) is estimated using the data-driven method. The $qqZZjj$ electroweak signal is obtained from \textsc{PowhegV2}, and the electroweak production of triboson and two jets ($VZZjj$) is obtained from \textsc{Sherpa}. The vertical-solid error bars on the data points represent the statistical uncertainty in the measured data, and the dashed black band in each bin represents the impact of the total theoretical and experimental uncertainties on the predicted detector-level yields. The impact on the bin yield from the total systematic uncertainties and the statistical precision each ranges from $15$ to $20\%$, depending on the bins and the distributions. 
+For each of these distributions, the measured data (black dot) is compared with the state-of-the-art SM predictions, where the two QCD signal $qqZZjj$ (red) and $ggZZjj$ (blue), and the two MC predicted background, $VVV$ (yellow) and $ttV$ (purple) are \textsc{Sherpa} predictions. The contribution from non-prompt backgrounds (light pink) is estimated using the data-driven method. The $qqZZjj$ electroweak signal is obtained from \textsc{PowhegV2}, and the electroweak production of triboson and two jets ($VZZjj$) is obtained from \textsc{Sherpa}. The vertical-solid error bars on the data points represent the statistical uncertainty in the measured data, and the dashed black band in each bin represents the impact of the total theoretical and experimental uncertainties on the predicted detector-level yields. The impact on the bin yield from the total systematic uncertainties and the statistical precision each ranges from $15$ to $20\%$, depending on the bins and the distributions. 
 
 The lower panel in these distributions shows the ratio of data yields to the total SM predicted yields, which are compatible within the total uncertainties. Some discrepancies are observed for some distributions. For instance, the yield is underpredicted in the second and the third bin of $m_{jj}$ and $m_{4l}$, respectively. However, these differences are statistically insignificant. Moreover, a slight but statistically insignificant asymmetry is also observed in the measured distribution of $\Delta \phi _{jj}^{signed}$, which is expected to be symmetric in the SM. 
 
